feat: add images to swagger
