# backend/src/admin/image/image.controller.ts
@@ -55,6 +55,11 @@ export class ImageController {
 
     const filePath = join(process.cwd(), `/uploads/images/${imageId}`);
     if (existsSync(filePath)) {
+      res.set({
+        'Content-Type': 'image/jpg',
+        'Content-Disposition': `inline; filename=${imagename}`,
+      });
+
       return of(res.sendFile(filePath));
     }
 
